--- a/Frontend_app/app/src/main/res/values/strings.xml
+++ b/Frontend_app/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Lost&amp;FoundManagementSystem</string>
+    <string name="app_name">CIT-U Lost and Found</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
